focus event on model button added

--- a/app/views/partials/_models.html.erb
+++ b/app/views/partials/_models.html.erb
@@ -1,7 +1,7 @@
 <select id="model-button" name='model'>
-  <option default>Model</option>
+  <option value="Models" default>Model</option>
   <%=  models_array.each do |array| %>
-    <option><%= array %></option>
+    <option value=<%= array %>><%= array %></option>
   <% end %>
 </select>
 
