--- a/app/views/partials/_years.html.erb
+++ b/app/views/partials/_years.html.erb
@@ -1,3 +1,8 @@
 <select id="year-button" name='year'>
-  <option value="" default selected>Year</option>
+  <option value="Years" default selected>Year</option>
+   <%=  years_array.each do |array| %>
+    <option value=<%= array %>><%= array %></option>
+  <% end %>
 </select>
+
+
