margin top 20% added to .container

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -55,7 +55,7 @@ ul.tabs li.current{
 }
 .container{
   background-color: cornsilk;
-  margin-top: 20%
+  margin-top: 20%;
   margin-right: auto;
   margin-left: auto;
   width: 50%;
