--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -4,7 +4,6 @@
 }
 .float-left{
   border-radius: 8px;
-  margin-top: 30%;
   margin-left: auto;
   margin-right: auto;
   background-color: #D9E4E6;
@@ -54,6 +53,7 @@ ul.tabs li.current{
   border-bottom: 1px solid black;
 }
 .container{
+  border-radius: 8px;
   text-align: center;
   background-color: cornsilk;
   margin-top: 20%;
@@ -61,7 +61,11 @@ ul.tabs li.current{
   margin-left: auto;
   width: 50%;
 }
+.container p{
+  padding-top: 3%;
+}
 
 #search-form{
+  padding-top: 4%;
   overflow: auto;
 }
