reviews parsed through submit button

--- a/app/views/partials/_reviews.html.erb
+++ b/app/views/partials/_reviews.html.erb
@@ -1,2 +1,7 @@
-<!-- <p>aaaa</p>
- -->
+<div class="reviews">
+  <ul>
+  <% reviews.each do |review| %>
+    <li><%= review %></li>
+  <% end %>
+    </ul>
+</div>
