reviews partial created

--- a/app/views/partials/_reviews.html.erb
+++ b/app/views/partials/_reviews.html.erb
@@ -1,4 +1,4 @@
-<div id="tab-1" class="tab-content current reviews">
+<div id="tabs-1" class="tab-content current reviews">
     <% reviews.each do |review| %>
   <div class="review">
   <%= review %>
