br added to each p review

--- a/app/views/partials/_reviews.html.erb
+++ b/app/views/partials/_reviews.html.erb
@@ -1,7 +1,7 @@
-<div id="tabs-1" class="tab-content current reviews">
+<div id="tab-1" class="tab-content current reviews">
     <% reviews.each do |review| %>
   <div class="review">
-  <p><%= review %></p>
+  <p><%= review %></p><br>
   </div>
     <% end %>
 
