--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -41,13 +41,14 @@ ul.tabs li.current{
   margin-left: 52px;
 }*/
 .tab-content{
+  margin-top: 20%;
   text-align: start;
-  display: none;
+  /*display: none;*/
   background: #ededed;
 }
 
 .tab-content.current{
-  margin-top: 0;
+  /*margin-top: 20%;*/
   display: inherit;
 }
 
