--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,7 +26,7 @@
       </ul>
 
       <%= render partial: 'partials/reviews', locals: {reviews: []} %>
-      <%= render partial: 'partials/safety', locals: {reviews: []} %>
+      <%= render partial: 'partials/safety', locals: {safety: []} %>
     </div>
 </div>
 
