--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -43,7 +43,7 @@ ul.tabs li.current{
 .tab-content{
   margin-top: 20%;
   text-align: start;
-  /*display: none;*/
+  display: none;
   background: #ededed;
 }
 
