--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -22,7 +22,7 @@ ul.tabs{
   overflow: auto;
   margin: 0px;
   padding: 0px;
-  list-style: none;
+  /*list-style: none;*/
 }
 ul.tabs li{
   overflow: auto;
