--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -22,14 +22,14 @@ ul.tabs{
   overflow: auto;
   margin: 0px;
   padding: 0px;
-  /*list-style: none;*/
+  list-style: none;
 }
 ul.tabs li{
   overflow: auto;
   background: none;
   color: gray;
   display: inline-block;
-  padding: 10px 15px;
+  padding: 10px 14px;
   cursor: pointer;
 }
 ul.tabs li.current{
