--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -7,7 +7,7 @@
   margin-left: auto;
   margin-right: auto;
   background-color: #D9E4E6;
-  font-size: 20px;
+  font-size: 21px;
   width: 80%;
   text-align: center;
   position: relative;
@@ -26,7 +26,7 @@ ul.tabs{
 }
 ul.tabs li{
   overflow: auto;
-  background: inherit;
+  background: none;
   color: gray;
   display: inline-block;
   padding: 10px 15px;
