color blue on ul.tabs li.current

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 .float-left{
-  border-radius: 9px;
+  border-radius: 8px;
   margin-left: auto;
   margin-right: auto;
   background-color: #D9E4E6;
@@ -35,7 +35,7 @@ ul.tabs li{
 ul.tabs li.current{
   border-radius: 8px;
   background: #e1e8f4;
-  color: black;
+  color: blue;
 }
 /*.tab-link.current{
   margin-left: 52px;
