--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -48,7 +48,6 @@ ul.tabs li.current{
 }
 
 .tab-content.current{
-  /*margin-top: 20%;*/
   display: inherit;
 }
 
@@ -83,5 +82,8 @@ ul.tabs li.current{
   border-radius: 8px;
   font-size: 15px;
 }
+.tabs li a {
 
+    text-decoration: none;
+}
 
