--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-.float-left{
+.tabs-div{
   border-radius: 8px;
   margin-left: auto;
   margin-right: auto;
@@ -12,7 +12,7 @@
   text-align: center;
   position: relative;
 }
-.float-left > div > div {
+.tabs-div > div > div {
   margin-right: 2%;
   margin-left: 2%;
   position: relative;
@@ -87,5 +87,9 @@ ul.tabs li.current{
 .tabs li a {
 
     text-decoration: none;
+}
+
+.tabs-div{
+  display: none;
 }
 
