--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,8 +18,8 @@
 
 </div>
 
-<div class="float-left-div">
-    <div class="float-left">
+
+    <div class="tabs-div">
 
       <ul class="tabs">
         <li class="current"><a href="#tab-1">Reviews</a></li>
@@ -29,7 +29,7 @@
       <%= render partial: 'partials/reviews', locals: {reviews: []} %>
       <%= render partial: 'partials/safety', locals: {safety: []} %>
     </div>
-</div>
+
 
 
 
