--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
 
 </div>
     <div class="reviews-overview">
-
+    <%= render partial: 'partials/averageRating', locals: {averageRating: []} %>
     </div>
 
     <div class="tabs-div">
