2% padding-top added to ratings div

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -103,6 +103,7 @@ ul.tabs li.current{
   border-bottom: 1px solid black;
 }
 .ratings{
+  padding-top: 2%;
   padding-right: 5%;
   padding-left: 5%;
 }
