css added for stars.span

--- a/app/views/partials/_averageRating.html.erb
+++ b/app/views/partials/_averageRating.html.erb
@@ -1,8 +1,3 @@
 <div class="ratings">
-    <% averageRating.each do |rating| %>
-  <div>
-  <p><%= rating %></p><br>
-  </div>
-    <% end %>
-
+    <span class="stars"><%= averageRating%></span>
 </div>
