--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -109,3 +109,14 @@ ul.tabs li.current{
   padding-right: 5%;
   padding-left: 5%;
 }
+
+span.stars, span.stars span {
+    display: block;
+    background: url(http://www.ulmanen.fi/stuff/stars.png) 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
+}
