--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -110,9 +110,10 @@ ul.tabs li.current{
   padding-left: 5%;
 }
 
+
 span.stars, span.stars span {
     display: block;
-    background: url(http://www.ulmanen.fi/stuff/stars.png) 0 -16px repeat-x;
+    background: url('stars.png') 0 -16px repeat-x;
     width: 80px;
     height: 16px;
 }
