--- a/app/views/partials/_averageRating.html.erb
+++ b/app/views/partials/_averageRating.html.erb
@@ -1,5 +1,7 @@
 <div class="ratings">
-   Rating: <span class="stars">1</span>
-
+   <!-- Rating: <span class="stars">1</span> -->
+<span style="display: block; width: 65px; height: 13px; background: url(star-rating-sprite.png) 0 0;">
+    <span style="display: block; width: 70%; height: 13px; background: url(star-rating-sprite.png) 0 -13px;"></span>
+</span>
 
 </div>
