--- a/app/views/partials/_averageRating.html.erb
+++ b/app/views/partials/_averageRating.html.erb
@@ -1,7 +1,7 @@
 <div class="ratings">
-   <!-- Rating: <span class="stars">1</span> -->
-<span style="display: block; width: 640px; height: 175px; background: url('/assets/stars5.png') 0 0;">
-    <span style="display: block; width: 70%; height: 175px; background: url('/assets/stars5.png') 0 -154px;"></span>
-</span>
 
+<span style="display: block; width: 640px; height: 175px; background: url('/assets/stars5.png') 0 0;">
+    <span id = "stars" style="display: block; width: 90%; height: 175px; background: url('/assets/stars5.png') 0 -154px;"></span>
+</span>
+  <p class="zzz"><%= averageRating%></p>
 </div>
