--- a/app/views/partials/_averageRating.html.erb
+++ b/app/views/partials/_averageRating.html.erb
@@ -1,7 +1,7 @@
 <div class="ratings">
 
-<span style="display: block; width: 640px; height: 175px; background: url('/assets/stars5.png') 0 0;">
-    <span id = "stars" style="display: block; width: 90%; height: 175px; background: url('/assets/stars5.png') 0 -154px;"></span>
+<span class="stars-div" style="display: block; width: 640px; height: 175px; background: url('/assets/stars5.png') 0 0;">
+    <span class = "stars" style="display: block; width: 10%; height: 175px; background: url('/assets/stars5.png') 0 -154px;"></span>
 </span>
-  <p class="zzz"><%= averageRating%></p>
 </div>
+  <p class="zzz"><%= averageRating%></p>
