--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -43,6 +43,8 @@ ul.tabs li.current{
   margin-left: 52px;
 }*/
 .tab-content{
+  padding-right: 2%;
+  padding-left: 2%;
   margin-top: 0;
   text-align: start;
   display: none;
