border bottom added to author_review p

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -114,10 +114,6 @@ ul.tabs li.current{
 
 }
 
-/*.stars-div{
-  display: none;
+.authors_reviews{
+  border-bottom: 1px solid gray;
 }
-.stars{
-  display: none;
-}*/
-
