--- a/app/views/partials/_reviews.html.erb
+++ b/app/views/partials/_reviews.html.erb
@@ -1,7 +1,7 @@
 <div id="tab-1" class="tab-content current">
     <% authors_and_reviews.each do |author,review| %>
   <div class="review">
-  <p><b>By <i><%= author %></i> :</b> <%= review%></p><br>
+  <p class="authors_reviews"><b>By <i><%= author %></i> :</b> <%= review%></p><br>
   </div>
     <% end %>
 
