submitButtonEachCarRating function added

--- a/app/views/partials/_reviews.html.erb
+++ b/app/views/partials/_reviews.html.erb
@@ -4,6 +4,6 @@
   <p class="authors_reviews"><b>By <i><%= author %></i> :</b> <%= review%></p><br>
   </div>
     <% end %>
-
+<p class="rating"></p>
 </div>
 
