--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,7 +29,7 @@
         <li><a href="#tab-2">Safety Ratings</a></li>
       </ul>
 
-      <%= render partial: 'partials/reviews', locals: {reviews: [], authors: [], authors_and_reviews: []} %>
+      <%= render partial: 'partials/reviews', locals: {reviews: [], authors: [], authors_and_reviews: [], rating: ""} %>
       <%= render partial: 'partials/safety', locals: {safety: []} %>
     </div>
 
