font family changed on form message

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -130,7 +130,10 @@ ul.tabs li.current a{
 .review{
   position: relative;
 }
+.form-message{
+  font-family: "helvetica neue", helvetica, arial, sans-serif;
 
+}
 
 .cardex{
   font-family: "helvetica neue", helvetica, arial, sans-serif;
