--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 <h1 class="cardex">CARDEX</h1>
 <p class="cardex-p">Guides you through your decision making process.</p>
 <div class = "container" >
-  <p>Choose year, make, model and see the reviews:</p>
+  <p class="form-message">Choose year, make, model and see the reviews:</p>
 
   <form id="search-form" action="/searches" method="post">
     <select id="make-button" name='make'>
