--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+.tabs{
+  font-family: "helvetica neue";
+}
 .tabs-div{
   border-radius: 8px;
   margin-left: auto;
