fade event added to cardex intro

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 
 <div class="road"> </div>
+<div id="fade">
 <h1 class="cardex">CARDEX</h1>
 <p class="cardex-p">Guides you through your decision making process.</p>
+</div>
 <div class = "container" >
   <p class="form-message">Choose year, make, model and see the reviews:</p>
 
