--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -24,7 +24,7 @@ ul.tabs{
 ul.tabs li{
   overflow: auto;
   background: none;
-  color: gray;
+  color: black;
   display: inline-block;
   padding: 15px 15px;
   cursor: pointer;
